styles/style.css
/* ... */
.jelly-text-2::after {
    content: '</h1>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: 60px;
    left: -37px;
}
.subtitle {
    color: #8D8D8D;
    font-family: sans-serif;
    font-size: 18px;
    padding-top: 18px;
    padding-left: 14px;

}

.subtitle::before {
    content: '<p>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: -27px;
    left: 14px;
}

.subtitle::after {
    content: '</p>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: 23px;
    left: -260px;
}

.initial-tag-head::after {
    content: '<html>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: -200px;
    left: 8px;
}

.initial-tag-body::after {
    content: '<body>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: -220px;
    left: 19px;
}

@media screen and (max-width: 680px) {
    .ASH {
        position: relative;
        left: 30px;
    }

    .ASI {
        position: relative;
        left: 18px;
    }

    .ASCOMMA {
        position: relative;
        left: 3px;
    }

    .ASI2 {
        position: relative;
        left: 30px;
    }

    .ASAPOSTROPHE {
        position: relative;
        left: 16px;
    }

    .ASM {
        position: relative;
        left: 2px;
    }

    .ASA {
        position: relative;
        left: 4px;
    }

    .ASM2 {
        position: relative;
        left: -6px;
    }

    .ASA2 {
        position: relative;
        left: -16px;
    }

    .ASN {
        position: relative;
        left: -26px;
    }

    .ASG {
        position: relative;
        left: -23px;
    }

    .ASU {
        position: relative;
        left: -36px;
    }

    .ASP {
        position: relative;
        left: -47px;
    }

    .AST {
        position: relative;
        left: -57px;
    }

    .ASA3 {
        position: relative;
        left: -67px;
    }

    .ASDOT {
        position: relative;
        left: -76px;
    }

    .jelly-text-1::after {
        content: '<h1>';
        font-family: 'La Belle Aurore', cursive;
        color: #515152;
        font-size: 1.3rem;
        position: relative;
        top: -23px;
        left: -70px;
    }

    .jelly-text-2::after {
        content: '</h1>';
        font-family: 'La Belle Aurore', cursive;
        color: #515152;
        font-size: 1.3rem;
        position: relative;
        top: 36px;
        left: -87px;
    }
    .subtitle {
        color: #8D8D8D;
        font-family: sans-serif;
        font-size: 18px;
        padding-top: 18px;
        padding-left: 14px;
    
    }
    
    .subtitle::before {
        content: '<p>';
        font-family: 'La Belle Aurore', cursive;
        color: #515152;
        font-size: 1.3rem;
        position: relative;
        top: -20px;
        left: 11px;
    }
    
    .subtitle::after {
        content: '</p>';
        font-family: 'La Belle Aurore', cursive;
        color: #515152;
        font-size: 1.3rem;
        position: relative;
        top: 19px;
        left: -259px;
    }
    
    .initial-tag-head::after {
        content: '<html>';
        font-family: 'La Belle Aurore', cursive;
        color: #515152;
        font-size: 1.3rem;
        position: relative;
        top: -200px;
        left: 8px;
    }
    
    .initial-tag-body::after {
        content: '<body>';
        font-family: 'La Belle Aurore', cursive;
        color: #515152;
        font-size: 1.3rem;
        position: relative;
        top: -220px;
        left: 19px;
    }
}

/* Sections */
.about_section {

    display: flex;
    flex-direction: column;
    justify-content: center;

}

/* Media Query */
@media screen and (max-width: 1135px) {
    .left_main {
        display: none;
    }
}

/* Skills jelly bounce */

.skills-content {
    font-size: 1.2rem;
    font-family: "Open Sans", sans-serif;
    line-height: 1.5;
    margin-top: 2rem;
    margin-left: 38px;
}

.SS1 {
    position: relative;
    left: 30px;
}

.SS1::before {
    content: '<h2>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: 0px;
    left: 0px;
}

.SS1::after {
    content: '</h2>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: 65px;
    left: -77px;
}

.SK {
    position: relative;
    left: -28px;
}

.SI {
    position: relative;
    left: -40px;
}

.SL1 {
    position: relative;
    left: -50px;
}

.SL2 {
    position: relative;
    left: -64px;
}

.SS2 {
    position: relative;
    left: -75px;
}


@media screen and (max-width:680px) {
    .SS1 {
        position: relative;
        left: 6px;
    }

    .SS1::before {
        content: '<h2>';
        font-family: 'La Belle Aurore', cursive;
        color: #515152;
        font-size: 1.3rem;
        position: relative;
        top: -20px;
        left: 16px;
    }

    .SS1::after {
        content: '</h2>';
        font-family: 'La Belle Aurore', cursive;
        color: #515152;
        font-size: 1.3rem;
        position: relative;
        top: 39px;
        left: -48px;
    }

    .SK {
        position: relative;
        left: -52px;
    }

    .SI {
        position: relative;
        left: -64px;
    }

    .SL1 {
        position: relative;
        left: -75px;
    }

    .SL2 {
        position: relative;
        left: -88px;
    }

    .SS2 {
        position: relative;
        left: -99px;
    }
}

/* Project jelly bounce */
.projects {
    display: flex;
    flex-direction: column;
}

.PP {
    position: relative;
    left: 30px;
}
/* ... */

